Update with my info

--- a/index.html
+++ b/index.html
@@ -6,24 +6,24 @@
 -->
 <html>
 	<head>
-		<title>Big Picture by HTML5 UP</title>
+		<title>Daniela</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="icon" type="image/jpg" href="./images/favicon.jpg"/>
 	</head>
 	<body class="is-preload">
 
 		<!-- Header -->
 			<header id="header">
-				<h1>Big Picture</h1>
+				<h1>Daniela</h1>
 				<nav>
 					<ul>
-						<li><a href="#intro">Intro</a></li>
-						<li><a href="#one">What I Do</a></li>
-						<li><a href="#two">Who I Am</a></li>
-						<li><a href="#work">My Work</a></li>
-						<li><a href="#contact">Contact</a></li>
+						<li><a href="#intro" class="far fa-hand-peace"></a></li>
+						<li><a href="#one">About</a></li>
+						<li><a href="#two">Skills</a></li>
+						<li><a href="#work">Blog</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -32,10 +32,20 @@
 			<section id="intro" class="main style1 dark fullscreen">
 				<div class="content">
 					<header>
-						<h2>Hey.</h2>
+						<h2>Daniela Zapata Riesco.</h2>
 					</header>
-					<p>Welcome to <strong>Big Picture</strong> a responsive site template designed by <a href="https://html5up.net">HTML5 UP</a><br />
-					and released for free under the <a href="https://html5up.net/license">Creative Commons Attribution license</a>.</p>
+					<!-- <p>Staff Software Engineer <i class="far fa-play-circle"></i> Team Lead <i class="far fa-play-circle"></i> Music Lover</p> -->
+					<p>Staff Software Engineer <strong>.</strong> Team Lead <strong>.</strong> Music Lover</p>
+					<div class="icons-intro">
+						<ul class="icons-intro">
+							<li><a href="https://twitter.com/zapidan" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://www.linkedin.com/in/danielazapata/" target="_blank" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://github.com/zapidan" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
+							<!-- <li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li> -->
+							<li><a href="https://www.goodreads.com/user/show/66265770-daniela" target="_blank" class="icon brands fa-goodreads-g"><span class="label">Goodreads</span></a></li>
+							<li><a href="mailto:zapidan@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						</ul>
+					</div>
 					<footer>
 						<a href="#one" class="button style2 down">More</a>
 					</footer>
@@ -43,85 +53,60 @@
 			</section>
 
 		<!-- One -->
-			<section id="one" class="main style2 right dark fullscreen">
+			<!-- <section id="one" class="main style2 right dark fullscreen"> -->
+			<section id="one" class="main style2 dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>What I Do</h2>
+						<h2>Who I Am</h2>
 					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+					<p>Hi! I'm a software engineer lead with 10 years of experience in different tech industries. I've worked as a consultant in several client projects ranging
+						from legacy systems to big data and no-sql. I have 5 years experience of working in <strong>AI/ML</strong> in a data science startup, and I am just starting
+						my journey in a <strong>fin-tech</strong> startup!
+					</p>
 				</div>
 				<a href="#two" class="button style2 down anchored">Next</a>
 			</section>
 
 		<!-- Two -->
-			<section id="two" class="main style2 left dark fullscreen">
-				<div class="content box style2">
-					<header>
-						<h2>Who I Am</h2>
-					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
-				</div>
-				<a href="#work" class="button style2 down anchored">Next</a>
+			<section id="two" class="main style2 dark fullscreen center">
+					<div class="content box style2">
+						<header>
+							<h2>Skills</h2>
+						</header>
+						<p>I'm a generalist and I work with many technologies. Some of my skills include:</p>
+						<ul class="icons-grid">
+							<li>
+								<span class="major fab icon-scala-copy"></span>
+								<h3>Scala</h3>
+							</li>
+							<li>
+								<span class="major fab fa-python"></span>
+								<h3>Python</h3>
+							</li>
+							<li>
+								<span class="major fas fa-cogs"></span>
+								<h3>Devops</h3>
+							</li>
+							<li>
+								<span class="major far fa-handshake"></span>
+								<h3>Team Collaboration</h3>
+							</li>
+						</ul>
+					</div>
+					<a href="#work" class="button style2 down anchored">Next</a>
 			</section>
 
 		<!-- Work -->
 			<section id="work" class="main style3 primary">
 				<div class="content">
 					<header>
-						<h2>My Work</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-						Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis
-						arcu, id varius justo euismod in. Curabitur egestas consectetur magna vitae.</p>
+						<h2>Blog</h2>
+						<p>Stay tuned! I'm creating a blog to "learn and share on a schedule". I already have the architecture figured out and I'll post
+							about it soon.
+						</p>
 					</header>
-
-					<!-- Gallery  -->
-						<div class="gallery">
-							<article class="from-left">
-								<a href="images/fulls/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" title="The Anonymous Red" alt="" /></a>
-							</article>
-							<article class="from-right">
-								<a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" title="Airchitecture II" alt="" /></a>
-							</article>
-							<article class="from-left">
-								<a href="images/fulls/03.jpg" class="image fit"><img src="images/thumbs/03.jpg" title="Air Lounge" alt="" /></a>
-							</article>
-							<article class="from-right">
-								<a href="images/fulls/04.jpg" class="image fit"><img src="images/thumbs/04.jpg" title="Carry on" alt="" /></a>
-							</article>
-							<article class="from-left">
-								<a href="images/fulls/05.jpg" class="image fit"><img src="images/thumbs/05.jpg" title="The sparkling shell" alt="" /></a>
-							</article>
-							<article class="from-right">
-								<a href="images/fulls/06.jpg" class="image fit"><img src="images/thumbs/06.jpg" title="Bent IX" alt="" /></a>
-							</article>
-						</div>
-
-				</div>
-			</section>
-
-		<!-- Contact -->
-			<section id="contact" class="main style3 secondary">
-				<div class="content">
-					<header>
-						<h2>Say Hello.</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.</p>
-					</header>
-					<div class="box">
-						<form method="post" action="#">
-							<div class="fields">
-								<div class="field half"><input type="text" name="name" placeholder="Name" /></div>
-								<div class="field half"><input type="email" name="email" placeholder="Email" /></div>
-								<div class="field"><textarea name="message" placeholder="Message" rows="6"></textarea></div>
-							</div>
-							<ul class="actions special">
-								<li><input type="submit" value="Send Message" /></li>
-							</ul>
-						</form>
-					</div>
+					<img class="under-construction" src="images/construction.jpg"/>
+					<a href='https://www.freepik.com/vectors/website'>Website vector created by stories - www.freepik.com</a>
 				</div>
 			</section>
 
@@ -130,17 +115,17 @@
 
 				<!-- Icons -->
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>
+						<li><a href="https://twitter.com/zapidan" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.linkedin.com/in/danielazapata/" target="_blank" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://github.com/zapidan" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<!-- <li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li> -->
+						<li><a href="https://www.goodreads.com/user/show/66265770-daniela" target="_blank" class="icon brands fa-goodreads-g"><span class="label">Goodreads</span></a></li>
+						<li><a href="mailto:zapidan@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 
 				<!-- Menu -->
 					<ul class="menu">
-						<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+						<li>&copy; <script>document.write(new Date().getFullYear())</script> Daniela Zapata Riesco</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 					</ul>
 
 			</footer>
