Make years of experience dynamic

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					<header>
 						<h2>Who I Am</h2>
 					</header>
-					<p>Hi! I'm a software engineer lead with 10 years of experience in different tech industries. I've worked as a consultant in several client projects ranging
+					<p>Hi! I'm a software engineer lead with <span id="years-between"></span> years of experience in different tech industries. I've worked as a consultant in several client projects ranging
 						from legacy systems to big data and no-sql. I have 5 years experience of working in <strong>AI/ML</strong> in a data science startup, and I am just starting
 						my journey in a <strong>fin-tech</strong> startup!
 					</p>
