--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
 							<li><a href="https://github.com/zapidan" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
 							<!-- <li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li> -->
 							<li><a href="https://www.goodreads.com/user/show/66265770-daniela" target="_blank" class="icon brands fa-goodreads-g"><span class="label">Goodreads</span></a></li>
-							<li><a href="mailto:zapidan@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 					</div>
 					<footer>
@@ -59,9 +58,9 @@
 					<header>
 						<h2>Who I Am</h2>
 					</header>
-					<p>Hi! I'm a software engineer lead with <span id="years-between"></span> years of experience in different tech industries. I've worked as a consultant in several client projects ranging
-						from legacy systems to big data and no-sql. I have 5 years experience of working in <strong>AI/ML</strong> in a data science startup, and I am just starting
-						my journey in a <strong>fin-tech</strong> startup!
+					<p>I'm a lead software engineer with over <span id="years-between"></span> years of experience in different tech industries. I've worked as a consultant in several client projects ranging
+						from traditional web development and legacy systems, to Big Data and NoSQL. I have 5 years of experience working in <strong>AI/ML</strong> in a data science startup, and I am just starting
+						my journey in a <strong>FinTech</strong> startup!
 					</p>
 				</div>
 				<a href="#two" class="button style2 down anchored">Next</a>
@@ -120,7 +119,6 @@
 						<li><a href="https://github.com/zapidan" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<!-- <li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li> -->
 						<li><a href="https://www.goodreads.com/user/show/66265770-daniela" target="_blank" class="icon brands fa-goodreads-g"><span class="label">Goodreads</span></a></li>
-						<li><a href="mailto:zapidan@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 
 				<!-- Menu -->
