--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<section id="intro" class="main style1 dark fullscreen">
 				<div class="content">
 					<header>
-						<h2>Daniela Zapata Riesco.</h2>
+						<h2>Daniela Zapata Riesco</h2>
 					</header>
 					<!-- <p>Staff Software Engineer <i class="far fa-play-circle"></i> Team Lead <i class="far fa-play-circle"></i> Music Lover</p> -->
 					<p>Staff Software Engineer <strong>.</strong> Team Lead <strong>.</strong> Music Lover</p>
