--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<title>Daniela</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="description" content="Welcome to Daniela Zapata Riesco's personal website. I am a staff software engineer and team lead. I have data science and machine learning experience. I enjoy working at fast-paced startups. I'm currently working in a FinTech startup. Please visit my blog"/>
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<link rel="icon" type="image/jpg" href="./images/favicon.jpg"/>
@@ -35,7 +36,7 @@
 						<h2>Daniela Zapata Riesco</h2>
 					</header>
 					<!-- <p>Staff Software Engineer <i class="far fa-play-circle"></i> Team Lead <i class="far fa-play-circle"></i> Music Lover</p> -->
-					<p>Staff Software Engineer <strong>.</strong> Team Lead <strong>.</strong> Music Lover</p>
+					<p>Engineering Manager <strong>.</strong> Personal Finance <strong>.</strong> Music Lover</p>
 					<div class="icons-intro">
 						<ul class="icons-intro">
 							<li><a href="https://twitter.com/zapidan" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -58,9 +59,9 @@
 					<header>
 						<h2>Who I Am</h2>
 					</header>
-					<p>I'm a lead software engineer with over <span id="years-between"></span> years of experience in different tech industries. I've worked as a consultant in several client projects ranging
-						from traditional web development and legacy systems, to Big Data and NoSQL. I have 5 years of experience working in <strong>AI/ML</strong> in a data science startup, and I am just starting
-						my journey in a <strong>FinTech</strong> startup!
+					<p>I'm an engineering manager with over <span id="years-between"></span> years of experience in different tech industries. I've worked as a consultant in several client projects ranging
+						from traditional web development and legacy systems, to Big Data and NoSQL. I have 5 years of experience working in <strong>AI/ML</strong> in a data science startup, and approaching my first year
+						at <a href="https://m1.finance/0a9UxNDoWOwo" target="_blank">M1 Finance</span></a>, a <strong>FinTech</strong> startup!
 					</p>
 				</div>
 				<a href="#two" class="button style2 down anchored">Next</a>
@@ -72,7 +73,7 @@
 						<header>
 							<h2>Skills</h2>
 						</header>
-						<p>I'm a generalist and I work with many technologies. Some of my skills include:</p>
+						<p>I take different roles as principal engineer / architect, engineering manager, and agile coach. Making my team happy and productive is my priority, then proposing, designing, and implementing business solutions with code. My skills include:</p>
 						<ul class="icons-grid">
 							<li>
 								<span class="major fab icon-scala-copy"></span>
@@ -104,7 +105,7 @@
 							about it soon.
 						</p>
 					</header>
-					<img class="under-construction" src="images/construction.jpg"/>
+					<img class="under-construction" src="images/construction.jpg" alt="Under Construction"/>
 					<a href='https://www.freepik.com/vectors/website'>Website vector created by stories - www.freepik.com</a>
 				</div>
 			</section>
@@ -120,10 +121,10 @@
 						<!-- <li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li> -->
 						<li><a href="https://www.goodreads.com/user/show/66265770-daniela" target="_blank" class="icon brands fa-goodreads-g"><span class="label">Goodreads</span></a></li>
 					</ul>
-
 				<!-- Menu -->
 					<ul class="menu">
-						<li>&copy; <script>document.write(new Date().getFullYear())</script> Daniela Zapata Riesco</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+						<li>&copy; <script>document.write(new Date().getFullYear())</script> Daniela Zapata Riesco</li>
+						<li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 					</ul>
 
 			</footer>
