--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<li><a href="#intro" class="far fa-hand-peace"></a></li>
 						<li><a href="#one">About</a></li>
 						<li><a href="#two">Skills</a></li>
-						<li><a href="#work">Blog</a></li>
+						<li><a href="https://zapidan.netlify.app" target="_blank">Blog</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -35,7 +35,6 @@
 					<header>
 						<h2>Daniela Zapata Riesco</h2>
 					</header>
-					<!-- <p>Staff Software Engineer <i class="far fa-play-circle"></i> Team Lead <i class="far fa-play-circle"></i> Music Lover</p> -->
 					<p>Engineering Manager <strong>.</strong> Personal Finance <strong>.</strong> Music Lover</p>
 					<div class="icons-intro">
 						<ul class="icons-intro">
@@ -60,7 +59,7 @@
 						<h2>Who I Am</h2>
 					</header>
 					<p>I'm an engineering manager with over <span id="years-between"></span> years of experience in different tech industries. I've worked as a consultant in several client projects ranging
-						from traditional web development and legacy systems, to Big Data and NoSQL. I have 5 years of experience working in <strong>AI/ML</strong> in a data science startup, and approaching my first year
+						from traditional web development and legacy systems, to Big Data and NoSQL. I have 5 years of experience working in <strong>AI/ML</strong> in a data science startup, and over a year
 						at <a href="https://m1.finance/0a9UxNDoWOwo" target="_blank">M1 Finance</span></a>, a <strong>FinTech</strong> startup!
 					</p>
 				</div>
@@ -93,21 +92,7 @@
 							</li>
 						</ul>
 					</div>
-					<a href="#work" class="button style2 down anchored">Next</a>
-			</section>
-
-		<!-- Work -->
-			<section id="work" class="main style3 primary">
-				<div class="content">
-					<header>
-						<h2>Blog</h2>
-						<p>Stay tuned! I'm creating a blog to "learn and share on a schedule". I already have the architecture figured out and I'll post
-							about it soon.
-						</p>
-					</header>
-					<img class="under-construction" src="images/construction.jpg" alt="Under Construction"/>
-					<a href='https://www.freepik.com/vectors/website'>Website vector created by stories - www.freepik.com</a>
-				</div>
+					<!-- <a href="#work" class="button style2 down anchored">Next</a> -->
 			</section>
 
 		<!-- Footer -->
