Add medium and update blog subdomain

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>Daniela</h1>
+				<h1><a href="#intro">Daniela</a></h1>
 				<nav>
 					<ul>
 						<li><a href="#intro" class="far fa-hand-peace"></a></li>
 						<li><a href="#one">About</a></li>
 						<li><a href="#two">Skills</a></li>
-						<li><a href="https://zapidan.netlify.app" target="_blank">Blog</a></li>
+						<li><a href="#work">Blog</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -41,8 +41,8 @@
 							<li><a href="https://twitter.com/zapidan" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://www.linkedin.com/in/danielazapata/" target="_blank" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://github.com/zapidan" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
-							<!-- <li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li> -->
 							<li><a href="https://www.goodreads.com/user/show/66265770-daniela" target="_blank" class="icon brands fa-goodreads-g"><span class="label">Goodreads</span></a></li>
+							<li><a href="https://medium.com/@zapidan" target="_blank" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
 						</ul>
 					</div>
 					<footer>
@@ -68,31 +68,42 @@
 
 		<!-- Two -->
 			<section id="two" class="main style2 dark fullscreen center">
-					<div class="content box style2">
-						<header>
-							<h2>Skills</h2>
-						</header>
-						<p>I take different roles as principal engineer / architect, engineering manager, and agile coach. Making my team happy and productive is my priority, then proposing, designing, and implementing business solutions with code. My skills include:</p>
-						<ul class="icons-grid">
-							<li>
-								<span class="major fab icon-scala-copy"></span>
-								<h3>Scala</h3>
-							</li>
-							<li>
-								<span class="major fab fa-python"></span>
-								<h3>Python</h3>
-							</li>
-							<li>
-								<span class="major fas fa-cogs"></span>
-								<h3>Devops</h3>
-							</li>
-							<li>
-								<span class="major far fa-handshake"></span>
-								<h3>Team Collaboration</h3>
-							</li>
-						</ul>
-					</div>
-					<!-- <a href="#work" class="button style2 down anchored">Next</a> -->
+				<div class="content box style2">
+					<header>
+						<h2>Skills</h2>
+					</header>
+					<p>I take different roles as principal engineer / architect, engineering manager, and agile coach. Making my team happy and productive is my priority, then proposing, designing, and implementing business solutions with code. My skills include:</p>
+					<ul class="icons-grid">
+						<li>
+							<span class="major fab icon-scala-copy"></span>
+							<h3>Scala</h3>
+						</li>
+						<li>
+							<span class="major fab fa-python"></span>
+							<h3>Python</h3>
+						</li>
+						<li>
+							<span class="major fas fa-cogs"></span>
+							<h3>Devops</h3>
+						</li>
+						<li>
+							<span class="major far fa-handshake"></span>
+							<h3>Team Collaboration</h3>
+						</li>
+					</ul>
+				</div>
+				<a href="#work" class="button style2 down anchored">Next</a>
+			</section>
+
+		<!-- Work -->
+			<section id="work" class="main style3 primary">
+				<div class="content">
+					<header>
+						<h2>Blog</h2>
+						<p>Checkout my<a href="https://blog.dzapatariesco.dev" target="_blank"> blog</a>, where I intend to write about random stuff that I learn in my engineering manager's journey!
+						</p>
+					</header>
+				</div>
 			</section>
 
 		<!-- Footer -->
@@ -103,8 +114,8 @@
 						<li><a href="https://twitter.com/zapidan" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://www.linkedin.com/in/danielazapata/" target="_blank" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/zapidan" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<!-- <li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li> -->
 						<li><a href="https://www.goodreads.com/user/show/66265770-daniela" target="_blank" class="icon brands fa-goodreads-g"><span class="label">Goodreads</span></a></li>
+						<li><a href="https://medium.com/@zapidan" target="_blank" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
 					</ul>
 				<!-- Menu -->
 					<ul class="menu">
