Update index bio and icons

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>Daniela</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="description" content="Welcome to Daniela Zapata Riesco's personal website. I am a staff software engineer and team lead. I have data science and machine learning experience. I enjoy working at fast-paced startups. I'm currently working in a FinTech startup. Please visit my blog"/>
+		<meta name="description" content="Welcome to Daniela Zapata Riesco's personal website. I am a hands-on engineering leader. I have data science and machine learning experience. I enjoy working at fast-paced startups. I'm currently working in a FinTech startup. Please visit my blog"/>
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<link rel="icon" type="image/jpg" href="./images/favicon.jpg"/>
@@ -24,7 +24,7 @@
 						<li><a href="#intro" class="far fa-hand-peace"></a></li>
 						<li><a href="#one">About</a></li>
 						<li><a href="#two">Skills</a></li>
-						<li><a href="#work">Blog</a></li>
+						<li><a href="#blog">Blog</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -58,9 +58,9 @@
 					<header>
 						<h2>Who I Am</h2>
 					</header>
-					<p>I'm an engineering manager with over <span id="years-between"></span> years of experience in different tech industries. I've worked as a consultant in several client projects ranging
-						from traditional web development and legacy systems, to Big Data and NoSQL. I have 5 years of experience working in <strong>AI/ML</strong> in a data science startup, and over a year
-						at <a href="https://m1.finance/0a9UxNDoWOwo" target="_blank">M1 Finance</span></a>, a <strong>FinTech</strong> startup!
+					<p>I'm a <b>Senior Engineering Manager</b> with over <b><span id="years-between"></span> years </b> of experience in different tech industries. I've worked as a consultant in several client projects ranging
+						from traditional web development and legacy systems, to Big Data and NoSQL. I have 5 years of experience working in <strong>AI/ML</strong> in a data science startup, and almost 4 years
+						at a <strong>FinTech</strong> startup. I have been working fully <b>remote</b> since 2020, growing teams from 2 to 15 engineers, including managers.
 					</p>
 				</div>
 				<a href="#two" class="button style2 down anchored">Next</a>
@@ -83,26 +83,29 @@
 							<h3>Python</h3>
 						</li>
 						<li>
-							<span class="major fas fa-cogs"></span>
-							<h3>Devops</h3>
+							<span class="major fas fa-people-group"></span>
+							<!-- <span class="major fas fa-search"></span> -->
+							<h3>Team Collaboration</h3>
 						</li>
 						<li>
 							<span class="major far fa-handshake"></span>
-							<h3>Team Collaboration</h3>
+							<h3>Leadership</h3>
 						</li>
 					</ul>
 				</div>
-				<a href="#work" class="button style2 down anchored">Next</a>
+				<a href="#blog" class="button style2 down anchored">Next</a>
 			</section>
 
-		<!-- Work -->
-			<section id="work" class="main style3 primary">
+		<!-- Blog -->
+			<section id="blog" class="main style3 primary">
 				<div class="content">
 					<header>
 						<h2>Blog</h2>
 						<p>Checkout my<a href="https://blog.dzapatariesco.dev" target="_blank"> blog</a>, where I intend to write about random stuff that I learn in my engineering manager's journey!
 						</p>
 					</header>
+					<img class="under-construction" src="images/construction.jpg" alt="Under Construction"/>
+					<a href='https://www.freepik.com/vectors/website'>Website vector created by stories - www.freepik.com</a>
 				</div>
 			</section>
 
