remove resume until dns is solved

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<li><a href="#one">About</a></li>
 						<li><a href="#two">Skills</a></li>
 						<li><a href="#blog">Blog</a></li>
-						<li><a href="zapidan.github.io/json-resume" target="_blank">Resume</a></li>
+						<!-- <li><a href="zapidan.github.io/json-resume" target="_blank">Resume</a></li> -->
 					</ul>
 				</nav>
 			</header>
